[package]
name = "cache-manager"
version = "0.3.0"
edition = "2024"
description = "Simple managed directory system for project-scoped caches with optional eviction policies."
license = "MIT OR Apache-2.0"
authors = ["Jeremy <jeremy@example.com>"]
repository = "https://github.com/jzombie/rust-cache-manager"
categories = ["development-tools", "caching", "filesystem"]
keywords = [
    "cache",
    "artifact-cache",
    "eviction-policy",
    "filesystem",
    "workspace",
]

[features]
default = []
process-scoped-cache = ["dep:tempfile"]

[dependencies]
tempfile = { workspace = true, optional = true }

[dev-dependencies]
tempfile.workspace = true

[workspace.dependencies]
tempfile = "3.25.0"
