[package]
name = "cache-manager"
version = "0.4.0"
edition = "2024"
description = "Simple managed directory system for project-scoped caches with optional eviction policies."
license = "MIT OR Apache-2.0"
authors = ["Jeremy Harris <jeremy.harris@zenosmosis.com>"]
repository = "https://github.com/jzombie/rust-cache-manager"
categories = ["development-tools", "caching", "filesystem"]
keywords = ["cache", "artifact-cache", "eviction-policy", "filesystem", "workspace"]

# Optional/test dependencies
[workspace.dependencies]
tempfile = "3.27.0"

[features]
default = []
process-scoped-cache = ["dep:tempfile"]
os-cache-dir = ["dep:directories"]

[dependencies]
tempfile = { workspace = true, optional = true }
directories = { version = "6.0.0", optional = true }

[dev-dependencies]
tempfile.workspace = true
